# expanded-multiverse

./: LICENSE.md  README.md  mvloc.config.jsonc  pyproject.toml
auxfiles-ru/img/main_menus/: splash_emv_welcome_title.pdn
locale-machine/data/autoBlueprints.xml.append/: ja.po
locale-machine/data/blueprints.xml.append/: ja.po
locale-machine/data/events_sector_emv_droppoint.xml/: ja.po
locale-machine/data/events_sector_emv_gilded.xml/: ja.po
locale-machine/data/events_special_guards.xml.append/: ja.po
locale-machine/data/events_special_lightspeed.xml.append/: ja.po
locale-machine/data/events_special_morality.xml.append/: ja.po
locale-machine/data/hyperspace.xml.append/: ja.po
machine-json/: machine-ja-0.6.1.json
src-en/data/: animations.xml.append  autoBlueprints.xml.append  blueprints.xml.append  emv_ambassador_a.txt  emv_ambassador_a.xml  emv_auto_fed_a.txt  emv_auto_fed_a.xml  emv_bishop_a.txt  emv_coalition_a.txt  emv_freemantis_a.txt  emv_gilded_master.txt  emv_gilded_merchant.txt  emv_gilded_sun.txt  emv_gilded_sun.xml  emv_gilded_trueflagship.txt  emv_gilded_trueflagship.xml  emv_hacker_a.txt  emv_hektar_a.txt  emv_hektar_a.xml  emv_lanius_a.txt  emv_lanius_a.xml  emv_leech_a.txt  emv_lostsun_a.txt  emv_lostsun_a.xml  emv_mantis_a.txt  emv_mfk_a.txt  emv_mfk_a.xml  emv_mortis_a.txt  emv_mortis_a.xml  emv_mv_angel.txt  emv_mv_auto.txt  emv_mv_auto.xml  emv_mv_cura.txt  emv_mv_cura.xml  emv_mv_dusk.txt  emv_mv_dusk.xml  emv_mv_duskguard.txt  emv_mv_engiguard.txt  emv_mv_engiguard.xml  emv_mv_flagship.txt  (+42 more)
src-en/mod-appendix/: metadata.xml
(+162 files in other folders)
