[tool.poetry]
name = "expanded-multiverse-translation"
version = "0.1.0"
description = ""
authors = ["Aleev141 <aleev1414@gmail.com>"]
readme = "README.md"
packages = [{include = "expanded_multiverse_translation"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
mvlocscript = {git = "https://github.com/ftl-mv-translation/mvloc.git", branch = "feature/gemini"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
